# kaiju-scheduler

./: README.md  pyproject.toml  readthedocs.yaml  setup.cfg
.github/workflows/: release.yaml  tests.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  reference.rst
src/kaiju_scheduler/: __init__.py  interfaces.py  scheduler.py  server.py  utils.py
tests/: conftest.py  test_scheduler.py  test_server.py
